Backport to Forge 1.16.5